# magequery

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  composer.json  dist-workspace.toml  release-please-config.json
.github/workflows/: ci.yml  composer-branch.yml  publish-mirror.yml  release-please.yml  release.yml  sign-release.yml
.plans/: magecommand-m2-notes.md  magecommand-roadmap.md  magecommand.md
assets/skill/: SKILL.md
crates/magecommand/: Cargo.toml
crates/magecommand-engine/: Cargo.toml
crates/magecommand-engine/examples/: area_sections.rs  codegen_set.rs
crates/magecommand-engine/src/: areaconfig.rs  arguments.rs  build.rs  classify.rs  codegen.rs  compare.rs  definitions.rs  fused.rs  interception.rs  interceptor.rs  laminas.rs  lib.rs  manifest.rs  metadata.rs  phpexport.rs  pluginlist.rs  proxy.rs  reflect.rs
crates/magecommand-less/: Cargo.toml  NOTES.md
crates/magecommand-less/examples/: lessc.rs
crates/magecommand-less/scripts/: vendor-less-testdata.sh
crates/magecommand-less/src/: ast.rs  color.rs  css.rs  error.rs  lib.rs  minify.rs  options.rs  resolver.rs  unit.rs  value.rs
crates/magecommand-less/src/data/: colors.rs  mime.rs  mod.rs  units.rs
crates/magecommand-less/src/eval/: context.rs  extend.rs  import.rs  merge.rs  mixin.rs  mod.rs  operation.rs  scope.rs
crates/magecommand-less/src/functions/: boolean.rs  color_blend.rs  color_channel.rs  color_def.rs  color_op.rs  data_uri.rs  default_fn.rs  list.rs  math.rs  misc.rs  mod.rs  number.rs  passthrough.rs  string.rs  svg.rs  types.rs
crates/magecommand-less/src/lex/: mod.rs
crates/magecommand-less/src/parser/: atrule.rs  entities.rs  expr.rs  mod.rs  selector.rs
crates/magecommand-less/tests/: conformance.rs  fixtures.rs
crates/magecommand-less/tests/fixtures/: VENDOR.txt
crates/magecommand-php/: Cargo.toml
crates/magecommand-php/examples/: differential.rs
crates/magecommand-php/src/: constexpr.rs  lib.rs  model.rs  parse.rs  scan.rs
crates/magecommand-php/tests/: corpus.rs  reflect.php
crates/magecommand/src/: lib.rs  main.rs  watch.rs
crates/magecommand/src/static_deploy/: bundle.rs  cssdiff.rs  cssnotation.rs  deploy.rs  files.rs  jstranslation.rs  less.rs  minify.rs  mod.rs  requirejs.rs  verify.rs
crates/magecommand/tests/: static_jsbundle.rs  static_requirejs.rs
crates/magequery-cli/: Cargo.toml
crates/magequery-cli/src/: main.rs  style.rs
crates/magequery-cli/tests/: static_deploy.rs  static_fulltree.rs  static_fulltree_adminhtml.rs  static_less_file.rs  static_requirejs.rs
crates/magequery-core/: Cargo.toml
crates/magequery-core/src/: breadth.rs  composer.rs  db.rs  decrypt.rs  deploy.rs  di.rs  doctor.rs  eav.rs  error.rs  graphql.rs  ids.rs  index.rs  laminas_alias.rs  lib.rs  model.rs  parse.rs  php.rs  phparray.rs  redis.rs  resolver.rs  source.rs  sysconfig.rs  whatis.rs
crates/magequery-core/src/breadth/: admin.rs  events.rs  extensions.rs  frontend.rs  graphql.rs  indexer.rs  mod.rs  queue.rs  routes.rs  schema.rs
crates/magequery-core/src/db/: admin.rs  catalog.rs  config.rs  content.rs  mod.rs  rules.rs  runtime.rs  sales.rs  stores.rs
crates/magequery-core/src/engine/: di.rs  index.rs  mod.rs  resolver.rs  vfs.rs
crates/magequery-core/src/model/: admin.rs  catalog.rs  commerce.rs  eav.rs  mod.rs  project.rs  project_config.rs  runtime.rs  sales.rs  schema.rs  static_config.rs  wiring.rs
crates/magequery-core/src/parse/: admin.rs  config.rs  di.rs  entrypoints.rs  extensions.rs  frontend.rs  indexer.rs  mod.rs  module.rs  queue.rs  schema.rs  translations.rs  xml.rs
crates/magequery-core/src/queries/: config.rs  live.rs  mod.rs  static_queries.rs  wiring.rs
crates/magequery-lsp/: Cargo.toml
crates/magequery-lsp/src/: actions.rs  diag.rs  entity.rs  features.rs  layout.rs  lib.rs  rename.rs  server.rs  symbols.rs  textpos.rs
crates/magequery-lsp/tests/: e2e.rs
docs/: command-surface.md  incremental-compile.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  LICENSE  README.md  extension.toml
editors/zed/src/: lib.rs
packaging/composer/: README.md  composer.json
packaging/composer/src/: Launcher.php  version.php
packaging/magento-module/: README.md
packaging/magento-module/Cresset_MagecommandLess/: composer.json  registration.php
packaging/magento-module/Cresset_MagecommandLess/Adapter/: Processor.php
packaging/magento-module/Cresset_MagecommandLess/etc/: di.xml  module.xml
scripts/: publish-composer-branch.sh
src/: version.php
