[workspace]
resolver = "2"
members = ["crates/magequery-core", "crates/magequery-lsp", "crates/magequery-cli"]

[workspace.package]
version = "0.9.0" # x-release-please-version
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/magequery"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
quick-xml = "0.36"

[profile.release]
lto = "thin"
strip = true

# cargo-dist builds release artifacts with `--profile dist`. Inherit release;
# dist expects this profile to exist (normally added by `dist init`).
[profile.dist]
inherits = "release"
lto = "thin"
