[package]
name = "magequery"
description = "Inspect a Magento 2 codebase from the command line."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "magequery"
path = "src/main.rs"

[dependencies]
magequery-core = { path = "../magequery-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
anstyle = "1"
