[package]
name = "magequery"
description = "Inspect a Magento 2 codebase from the command line."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "magequery"
path = "src/main.rs"

[dependencies]
magequery-core = { path = "../magequery-core", features = ["db"] }
magequery-lsp = { path = "../magequery-lsp" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde_json = "1"
anyhow = "1"
anstyle = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
