[package]
name = "magequery"
description = "Inspect a Magento 2 codebase from the command line."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "magequery"
path = "src/main.rs"

# The write-side binary, shimmed from the magecommand lib crate. It ships
# from THIS package so the magequery-v release tag (a per-app tag) carries
# both binaries in one app — see dist-workspace.toml [dist.binaries].
[[bin]]
name = "magecommand"
path = "src/bin/magecommand.rs"

[dependencies]
magecommand = { path = "../magecommand" }
magequery-core = { path = "../magequery-core", features = ["db"] }
magequery-lsp = { path = "../magequery-lsp" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde_json = "1"
anyhow = "1"
anstyle = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# tempfile: the magecommand integration tests (moved here with the binary).
tempfile = "3"
