[package]
name = "magequery-core"
description = "Static analysis of a Magento 2 codebase: modules, DI resolution, plugins, events."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json = "1"
quick-xml.workspace = true
rayon = "1"
